gitops/generated/demo2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
  namespace: demo2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: demo2

  template:
    metadata:
      labels:
        app: demo2

    spec:
      containers:
      - name: demo2

        image: nginx:alpine

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 80

          initialDelaySeconds: 30
          periodSeconds: 20
