gitops/generated/demo2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo2

spec:
  selector:
    app: demo2

  ports:
  - name: http
    port: 80
    targetPort: 80

  type: ClusterIP
