gitops/generated/demo2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo2
  namespace: demo2

spec:
  ingressClassName: traefik

  rules:
  - host: demo2.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: demo2
            port:
              number: 80
